<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/your_score"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:textSize="@dimen/medium_text_size"/>
    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/score"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:textSize="@dimen/medium_text_size"/>

    <Button
        android:id="@+id/again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:textSize="@dimen/average_text_size"
        android:text="@string/try_again"/>

    <Button
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/average_text_size"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/exit"/>

</LinearLayout>